# qsccp

./: .gitmodules  README.md
ns-3/: .gitignore  CMakeLists.txt  wscript
ns-3/examples/energy/: CMakeLists.txt
ns-3/examples/error-model/: CMakeLists.txt
ns-3/examples/ipv6/: CMakeLists.txt
ns-3/examples/matrix-topology/: CMakeLists.txt
ns-3/examples/naming/: CMakeLists.txt
ns-3/examples/realtime/: CMakeLists.txt
ns-3/examples/routing/: CMakeLists.txt
ns-3/examples/socket/: CMakeLists.txt
ns-3/examples/stats/: CMakeLists.txt
ns-3/examples/tcp/: CMakeLists.txt
ns-3/examples/traffic-control/: CMakeLists.txt
ns-3/examples/tutorial/: CMakeLists.txt
ns-3/examples/udp/: CMakeLists.txt
ns-3/examples/udp-client-server/: CMakeLists.txt
ns-3/examples/wireless/: CMakeLists.txt
ns-3/scratch/: CMakeLists.txt
ns-3/scratch/subdir/: CMakeLists.txt
ns-3/src/antenna/: CMakeLists.txt
ns-3/src/aodv/: CMakeLists.txt
ns-3/src/aodv/examples/: CMakeLists.txt
ns-3/src/applications/: CMakeLists.txt
ns-3/src/applications/examples/: CMakeLists.txt
ns-3/src/bridge/: CMakeLists.txt
ns-3/src/bridge/examples/: CMakeLists.txt
ns-3/src/buildings/: CMakeLists.txt
ns-3/src/buildings/examples/: CMakeLists.txt
ns-3/src/config-store/: CMakeLists.txt
ns-3/src/config-store/examples/: CMakeLists.txt
ns-3/src/core/: CMakeLists.txt
ns-3/src/core/examples/: CMakeLists.txt
ns-3/src/csma/: CMakeLists.txt
ns-3/src/csma-layout/: CMakeLists.txt
ns-3/src/csma-layout/examples/: CMakeLists.txt
ns-3/src/csma/examples/: CMakeLists.txt
ns-3/src/dsdv/: CMakeLists.txt
ns-3/src/dsdv/examples/: CMakeLists.txt
ns-3/src/dsr/: CMakeLists.txt
ns-3/src/dsr/examples/: CMakeLists.txt
ns-3/src/energy/: CMakeLists.txt
ns-3/src/energy/examples/: CMakeLists.txt
ns-3/src/fd-net-device/: CMakeLists.txt
ns-3/src/fd-net-device/examples/: CMakeLists.txt
ns-3/src/flow-monitor/: CMakeLists.txt
ns-3/src/internet/: CMakeLists.txt
ns-3/src/internet-apps/: CMakeLists.txt
ns-3/src/internet-apps/examples/: CMakeLists.txt
ns-3/src/internet/examples/: CMakeLists.txt
ns-3/src/lr-wpan/: CMakeLists.txt
ns-3/src/lr-wpan/examples/: CMakeLists.txt
ns-3/src/lte/: CMakeLists.txt
ns-3/src/lte/examples/: CMakeLists.txt
ns-3/src/mesh/: CMakeLists.txt
ns-3/src/mesh/examples/: CMakeLists.txt
ns-3/src/mobility/: CMakeLists.txt
ns-3/src/mobility/examples/: CMakeLists.txt
ns-3/src/mpi/: CMakeLists.txt
ns-3/src/mpi/examples/: CMakeLists.txt
ns-3/src/ndnSIM/: CMakeLists.txt  wscript
ns-3/src/ndnSIM/NFD/: wscript
ns-3/src/ndnSIM/NFD/daemon/face/: TokenBucket.cpp  TokenBucket.hpp  generic-link-service.cpp  generic-link-service.hpp  queues.cpp  queues.hpp
ns-3/src/ndnSIM/NFD/daemon/fw/: retx-suppression-fixed.hpp
ns-3/src/ndnSIM/apps/: ndn-consumer-cbr.cpp  ndn-consumer-cbr.hpp  ndn-consumer-pcon-zipf.cpp  ndn-consumer-pcon-zipf.hpp  ndn-consumer-qsccp.cpp  ndn-consumer-qsccp.hpp  ndn-consumer.cpp  ndn-producer.cpp
ns-3/src/ndnSIM/examples/: CMakeLists.txt
ns-3/src/ndnSIM/helper/: ndn-stack-helper.cpp  ndn-stack-helper.hpp
ns-3/src/ndnSIM/model/: ndn-net-device-transport.cpp
ns-3/src/ndnSIM/ndn-cxx/: wscript
ns-3/src/ndnSIM/ndn-cxx/ndn-cxx/: data.cpp  data.hpp  face.cpp  interest.cpp  interest.hpp
ns-3/src/ndnSIM/ndn-cxx/ndn-cxx/encoding/: tlv.hpp
ns-3/src/ndnSIM/ndn-cxx/ndn-cxx/impl/: face-impl.hpp
ns-3/src/ndnSIM/ndn-cxx/ndn-cxx/lp/: fields.hpp  tags.hpp  tlv.hpp
ns-3/src/ndnSIM/utils/tracers/: ndn-l3-rate-tracer.cpp
ns-3/src/netanim/: CMakeLists.txt
ns-3/src/netanim/examples/: CMakeLists.txt
ns-3/src/network/: CMakeLists.txt
ns-3/src/network/examples/: CMakeLists.txt
ns-3/src/nix-vector-routing/: CMakeLists.txt
ns-3/src/nix-vector-routing/examples/: CMakeLists.txt
ns-3/src/olsr/: CMakeLists.txt
ns-3/src/olsr/examples/: CMakeLists.txt
ns-3/src/point-to-point/: CMakeLists.txt
ns-3/src/point-to-point-layout/: CMakeLists.txt
ns-3/src/point-to-point/examples/: CMakeLists.txt
ns-3/src/point-to-point/model/: point-to-point-net-device.cc
ns-3/src/propagation/: CMakeLists.txt
ns-3/src/propagation/examples/: CMakeLists.txt
ns-3/src/sixlowpan/: CMakeLists.txt
ns-3/src/sixlowpan/examples/: CMakeLists.txt
ns-3/src/spectrum/: CMakeLists.txt
ns-3/src/spectrum/examples/: CMakeLists.txt
ns-3/src/stats/: CMakeLists.txt
ns-3/src/stats/examples/: CMakeLists.txt
ns-3/src/tap-bridge/: CMakeLists.txt
ns-3/src/tap-bridge/examples/: CMakeLists.txt
ns-3/src/test/: CMakeLists.txt
ns-3/src/topology-read/: CMakeLists.txt
ns-3/src/topology-read/examples/: CMakeLists.txt
ns-3/src/traffic-control/: CMakeLists.txt
ns-3/src/traffic-control/examples/: CMakeLists.txt
ns-3/src/uan/: CMakeLists.txt
ns-3/src/uan/examples/: CMakeLists.txt
ns-3/src/virtual-net-device/: CMakeLists.txt
ns-3/src/virtual-net-device/examples/: CMakeLists.txt
ns-3/src/wave/: CMakeLists.txt
ns-3/src/wave/examples/: CMakeLists.txt
ns-3/src/wifi/: CMakeLists.txt
ns-3/src/wifi/examples/: CMakeLists.txt
ns-3/src/wimax/: CMakeLists.txt
ns-3/src/wimax/examples/: CMakeLists.txt
ns-3/utils/: CMakeLists.txt
ns-3/waf-tools/: cmake.py
scenario/: .gitignore  CMakeLists.txt  wscript
scenario/extensions/: QSCCPStrategy.cpp  QSCCPStrategy.h
scenario/scenarios/: qsccp1.cpp  qsccp2.cpp  qsccp3-1.cpp  qsccp3-2.cpp  qsccp4-1-single.cpp  qsccp4-2-multi.cpp  qsccp5.cpp
scenario/scenarios/disabled/: qsccp3-2.cpp  qsccp4-1-single.cpp  qsccp4-2-multi.cpp  qsccp5.cpp  qtest.cpp  qtest2.cpp  qtest3.cpp
scenario/topologies/: qsccp1.txt  qsccp2.txt  qsccp3-1.txt  qsccp3-2.txt  qsccp4.txt  qsccp5.txt
