cmake_minimum_required (VERSION 2.6)
project (ns)

add_definitions(-DNS3_BUILD_PROFILE_DEBUG -DNS3_ASSERT_ENABLE -DNS3_LOG_ENABLE -DHAVE_SYS_IOCTL_H=1 -DHAVE_IF_NETS_H=1 -DHAVE_NET_ETHERNET_H=1 -DHAVE_PACKET_H=1 -DHAVE_STD_TO_STRING=1 -DHAVE_PTHREAD=1 -DHAVE_SQLITE3=1 -DHAVE_OPENSSL=1 -DHAVE_IF_TUN_H=1)

set(CMAKE_CXX_FLAGS "-std=c++14 -O0 -ggdb -g3 -Wall -Wno-error=deprecated-declarations -fstrict-aliasing -Wstrict-aliasing -std=c++14")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/antenna)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/aodv)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/aodv/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/applications)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/applications/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/bridge)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/bridge/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/buildings)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/buildings/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/config-store)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/config-store/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/core)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/core/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/csma)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/csma/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/csma-layout)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/csma-layout/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/dsdv)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/dsdv/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/dsr)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/dsr/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/energy)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/energy/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/fd-net-device)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/fd-net-device/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/flow-monitor)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/internet)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/internet/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/internet-apps)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/internet-apps/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/lr-wpan)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/lr-wpan/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/lte)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/lte/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mesh)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mesh/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mobility)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mobility/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mpi)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/mpi/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/ndnSIM)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/ndnSIM/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/netanim)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/netanim/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/network)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/network/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/nix-vector-routing)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/nix-vector-routing/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/olsr)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/olsr/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/point-to-point)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/point-to-point/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/point-to-point-layout)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/propagation)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/propagation/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/sixlowpan)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/sixlowpan/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/spectrum)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/spectrum/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/stats)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/stats/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/tap-bridge)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/tap-bridge/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/test)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/topology-read)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/topology-read/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/traffic-control)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/traffic-control/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/uan)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/uan/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/virtual-net-device)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/virtual-net-device/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/wave)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/wave/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/wifi)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/wifi/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/wimax)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/wimax/examples)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/tcp)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/traffic-control)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/ipv6)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/error-model)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/matrix-topology)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/udp-client-server)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/naming)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/energy)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/wireless)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/routing)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/socket)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/tutorial)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/stats)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/realtime)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/examples/udp)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/scratch)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/scratch/subdir)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/utils)
